# auth_fastapi_example

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  config.py  exceptions.py
src/db/: main.py  redis.py
src/dependencies/: auth_deps.py  redis_getter.py  repo_getter.py  services_getter.py
src/models/: users.py  users_schema.py
src/repos/: user_repo.py
src/repos/interfaces/: i_user_repo.py
src/services/: oauth_service.py  users_service.py
src/utils/: email_utils.py  password_utils.py  token_utils.py
src/views/: auth_routes.py
tests/: conftest.py  test_auth.py  test_basics.py
